--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>不说再见</title>
+  <title>Youth</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body data-theme="1">
+<body id="#body" data-style-theme="1">
   <app-root></app-root>
 </body>
 </html>
