--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body id="#body" data-style-theme="1">
+<body id="#body" data-theme-style="aa">
   <app-root></app-root>
 </body>
 </html>
